--- a/SyllabusEnergyEcon.Rmd
+++ b/SyllabusEnergyEcon.Rmd
@@ -1,20 +1,15 @@
 ---
-title: "Syllabus EC438/538 Fall 2020"
+title: "Syllabus EC438/538 Fall 2021"
 author: "James Woods"
 date: ''
 output:
-  word_document: default
-  html_document:
-    df_print: paged
   pdf_document: default
-fontsize: 12pt
-sansfont
+fontsize: 12pt 
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
-
 
 # Course Description
 
@@ -22,273 +17,149 @@ The official description of the course is:
 
 > Economics and structure of energy markets, with a focus on electricity. Examines current policy issues arising from energy production and use.
 
+This is a companion course to EC 437/537 which will address regulatory and competitive policies in electricity, public transportation, water, natural, and telecommunications. The order of the courses has changed to reflect the evolving nature of the field.
 
-This is a companion course to EC 437/537 which will address regulatory and competitive policies in electricity, public transportation, water, natural,  and telecommunications.  The order of the courses has changed to reflect the evolving nature of the field.
+I provide two paths through this course. The first path focuses on a term paper. The second is more focused on classroom discussion, homework and exams.
+
+The term paper path requires some qualification steps. If quality and progress are not sufficient to produce a reasonable term paper, you will be shifted back to the second, more traditional path with significant make up work in the later half of the course.
 
 ## Prerequisites
 
-The undergraduate section has microeconomic theory, EC 311, or the calculus based version, EC 415, listed as prerequisites.  The graduate section requires only graduate standing.
+The undergraduate section has microeconomic theory, EC 311, or the calculus based version, EC 415, listed as prerequisites. The graduate section requires only graduate standing.
 
-As with most economics courses, the more background you bring to the class, the more get from the class.  For this class, it means bringing a background in microeconomic theory and econometrics.  Not all students will have a background in both and many of the graduate students from outside of economics will have neither.  Any technical skills that students are missing will be supplemented with in-class tutorials.
+# COVID-19
+
+The PSU campus is set to open with all students and faculty vaccinated and that everything will go back to normal.
+
+If they mentioned a free pony -- I missed it.
+
+## Health and Safety
+
+Viri mutate. Large parts of the world, parts of our state, and many sub-populations, e.g., children, are unvaccinated. This gives rise to new strains and the *possibility* that our current vaccines are less effective against these emerging strains than the existing ones.
+
+I will be applying an abundance of caution and planning for the possibility of another move to fully remote learning as Fall continues. In the mean time I will set up the class so you can join remotely or in-person.
+
+We will also be following a few simple practices:
+
+-   Office hours will generally be held in covered rooftop area on the fourth floor of the Urban Center Building. I'll be easy to spot.
+
+-   ~~If you have a cough, cold, runny nose or `think you are comming down with something`,~~ wear a mask in class or join remotely.
 
 # Contact Information
 
-Communication will be handled through slack https://psuenergyecon.slack.com. You should have received an invitation, if not, just go to that URL and use your @pdx.edu email to sign up. There are reasonable help documents to get you started. https://get.slack.help/hc/en-us/articles/218080037-Getting-started-for-new-users
+Communication will be handled through slack <http://woodseconomics.slack.com/>. You should have received an invitation, if not, just go to that URL and use this link () and your @pdx.edu email to sign up. There are reasonable help documents to get you started (<https://get.slack.help/hc/en-us/articles/218080037-Getting-started-for-new-users>)
 
-Slack will be used for IM, email and forum style communication.  It even handles voice calls. If you have a question about course material or the course itself, ask in one of the channels, e.g., #general. If you have a personal message that is not intended for others, send a direct message, i.e., @woodsj. The group has global do not disturb hours of 10pm - 8am.  If you would like something different, alter your personal settings.
-
-
-Please note that I am not online all the time, and when I am online I will prioritize well-phrased questions with sufficient detail.  I tend to ignore general complaints, questions that can be answered by reading the syllabus or using the search bar.
-
+Slack will be used for IM, email and forum style communication. It even handles phone and video calls. If you have a question about course material or the course itself, ask in one of the channels, e.g., \#general. If you have a personal message that is not intended for others, send a direct message, i.e., @woodsj.
 
 Office Hours:
 
+-   In-person office hours are Monday 3:30-5:30pm on the rooftop area of the urban center building or online if we move to remote, and Tuesdays 10:00-11:30 on zoom only, through the last week of class.
+-   You can schedule one-on-one meetings at <https://woodsj.youcanbook.me/>. These will be online meetings through zoom.
 
-+ There are no in-person office hours this term.  We will use Zoom to meet face-to-face. 
-+ Drop in office hours are Monday 3-4pm and Tuesday 10am-Noon through the last week of classes. I will keep a Zoom meeting up during this time.
-+ You can schedule one-on-one meetings at https://woodsj.youcanbook.me/.
+# Basis for Grade
+
+The two paths through the class have many of the same requirements but very different emphasis.
+
+Unless you opt-in to writing a term paper and show satisfactory preparation and performance, you will be on the Discussion and Exams path.
+
+Early in the term you will have the option of doing some preliminary work to demonstrate your ability to write a term paper and construct a viable topic. These are the small writing sample and abstract assignments listed below.  If you demonstrate your preparation and propose a reasonable topic, you are on the term paper track.
+
+This path has multiple check-in points and as long as you are making satisfactory progress you will continue on this path. If you get too far behind or the quality of the interim product is low, I will unilaterally shift you back to the Discussion and Exams Path with additional make up work.
+
+## Basis for Grade: Discussion and Exams
+
+Course grades will be determined by your performance as both a creator of table reads, briefly explained below but expanded  later, your participation in those table reads, homework assignments, a midterm and a final. In short, with the exception of the table read, it is a traditional class set up.
+
+The proportion of your grade from each task is defined below.
+
+-   Table Read Creation and Leadership: 30%
+-   Table Read Participation: 10%
+-   Homework: 20%
+-   Midterm (): 20%
+-   Final () : 20%
+
+## Basis for Grade; Term Paper
+
+Some students may wish to spend the majority of the term doing a deep dive on a topic of their choice or producing a technical writing sample or a paper that can be delivered at an academic conference.
+
+I have paid the conference fees for students to present.
+
+-   Table Read Participation: 15%
+-   Final Draft of Term Paper: 20%
+-   Draft Term Paper: 25%
+-   Presentation of Paper Topic: 15%
+-   Annotated Bibliography: 23%
+-   Abstract: 1%
+-   Writing Sample: 1%
+
+These students are still required to be present in class and to have read the material.  Note that some of the grade is based on table read participation.
+
+Students that are taking this path start by submitting a writing sample with a bibliography and citations from a previous class.  If the writing is of passable quality you will be allowed to construct a draft abstract. 
+
+Once your abstract is submitted we will meet to re-frame to topic into something reasonable for a 10-week course and your skill set.
+
+The annotated bibliography is the key step.  This should be your first outline of your paper.  It should include most of your key references and describe how you will use them in your paper.  If you don't demonstrate sufficient progress and organization at this stage, you will be transitioned back to discussion and exams.
+
+If there is a good start, then you can proceed and we can schedule an in-class presentation on your interim work.
+
+Please note that the draft paper is worth more than the final draft.  The draft paper should be mostly complete but lacking a little polish.
+
+## Transitioning Back to Discussion and Exams
+
+Some students will start down the term paper path and find that it isn't for them, either because they were too optimistic, their time constraints have changed, or the project is just not working.
+
+You can voluntarily transition back right after the annotated bibliography. I may force you back onto the discussion and exam path if your progress is insufficient.
+
+Your basis for grade will become:
+
+-   Abstract: 1%
+-   Writing Sample: 1%
+-   Table Read Creation and Leadership: 23%
+-   Table Read Participation: 20%
+-   Homework: 15%
+-   Midterm (): 20%
+-   Final () : 20%
+
+There will also be some reworking of the table read assignments. Those that continued on the exam path will have fewer assignments to allow those that did not have table read assignments, while they worked on term papers, to catch up.
+
+If you are transitioning back to the exam path from the term paper path, plan on a very serious workload commitment in the later half of the class to catch up.
+
+To be clear, transitioning away from the term paper is much harder than completing it or never starting.
+
+## Which Path?
+
+Students have a much wider range of preparation than in the past. Even with the same classes, students arrive with vastly different experience, abilities and skill sets.
+
+Pick what works for you, but don't focus on strategic short-term advantages. It is very easy to start on the term paper path, get behind, and then have to transition back to the exam path at the end of the term just as your other classes are ramping up.
+
+Sticking with one option is easy.  
+
+## What Ifs
+
+# The In-class Experience
+
+## Table Reads
+
+## Exam Days
+
+For those on the exam path, there is both a midterm and a final exam in this class. These are different from the homework assignments, which focus on one chapter or article at a time. The questions will require you to synthesize what you have learned, comparing and contrasting, using models and data from multiple sources to support your argument.
+
+These are open-note, open-book exams, but that should indicate that these are more difficult questions. Don't expect to burn through some algebra problems. If you are familiar with Costa's levels of inquiry, these are level three questions. The homework will tend to be level two and one.
+
+A set of potential questions will be distributed ahead of the exams. Only a subset or variation of the questions will be chosen for the exam.
+
+On exam day a Google doc will be shared with you. You should complete your work in that document. If you need to include diagrams or mathematical derivations and don't want to spend the time you can do those on paper, take a photo and upload it to the associated D2L assignment folder. Each photo should be labeled, e.g., figure 1, with corresponding text in your Google doc to indicate where the figure should be included.
+
+As per normal, exams are intended to measure individual performance. The work you turn in should be authentically yours. Communication between students during the exam is not allowed.
+
+## Participatory Grading
+
+The graduate assistant and I will be grading the bulk of the homework, exams, term papers and the like but you will have input on a few grades.
+
+Students producing a term paper have to perform a presentation. You will be asked for feedback on their presentation.
+
+Since multiple students will be assigned the same sections of papers and textbook for table reads, the easiest way to grade is based on the relative quality of the material.
+
+Each of you will have a single vote per section. The instructor will have 2 or 3 depending on the size of the class. Grades will be determined by an [instant runoff vote](https://en.wikipedia.org/wiki/Instant-runoff_voting).
 
 # Textbook and Other Resources
-
-The main text for the course is Dahl, Carol. _International Energy Markets: Understanding Pricing, Policies, & Profits._ PennWell Books, 2015.  It was chosen undergraduates in mind and illustrates many of the concepts they learned in EC 311/415. 
-
-This text will be heavily supplemented with material from the Energy Information Administration (EIA), journal articles and other resources available electronically through the library.  The goal is to keep the cost down.
-
-# Assessments and Grade Policy
-
-This class will be taught as a collaborative seminar with limited traditional lecture. There are no exams but there will be a considerable amount of writing, analysis and presentations.
-
-+ Discussion and Assignments (in total): 43%
-+ Final Draft of Term Paper: 20%
-+ Draft Term Paper: 15%
-+ Presentation of Paper Topic: 15%
-+ Annotated Bibliography: 3%
-+ Abstract: 2%
-+ Writing Sample: 2%
-
-
-Term papers and bibliographies will be turned in online as a pdf or a link to a google doc with PSU log in and granted comment privileges.  Malfunctioning links or corrupted files will be interpreted as a missed deadline and receive half the normal credit if corrected within 24 hrs. If a deadline is missed by more than 24 hrs, zero credit will be given.  
-
-It is not possible to receive a passing grade in the course if you don't in an acceptable final draft of the term paper, or miss  a lot of the in-class discussion and reading questions.
-
-## Grade Policy
-
-Grades will be assigned based on your rank in the class.  Nobody with fewer points than you will receive a higher grade than you. This does not mean that I have a target grade distribution.  It is completely possible for all the students in the class to earn As.  
-
-The last time I taught this class:
-
-+ 10 students received As. Two of these students had their paper accepted at a conference. That paper informed PGE's Electric School Bus Project, an ongoing pilot to convert school buses from diesel to electric and support the electric grid in the summer.
-+ One student received a C.  The student turned in a low-quality term paper, attended fewer classes than the students that received As but showed little evidence of having read the material.
-+ Three received Fs after attending fewer than half the classes and turning in very low-quality term papers that resulted from not paying attention to the term paper requirements, feedback on what they wrote, and advice on how to improve the paper.
-+ Three students received Incompletes (I) because they did not turn in a term paper but otherwise had acceptable work and would pass the course if they turned in the term paper. 
-
-Because of the three students that received Fs and the three that received incompletes, there are additional writing supports included in this class.  
-
-## P/NP Grades 
-
-PSU's policy on how P/NP grades will be used during the COVID-19 pandemic is in flux.  For Fall term, P/NP grades will count as letter grades for satisfying major and degree requirements.  
-
-Most faculty expect there to be an asterisk on pandemic period grades, but we can't guarantee how they will be perceived outside PSU.
-
-
-Please consult your funder for potential financial implications of switching to P/NP.  Not all scholarships will fund P/NP courses, and the VA may ask for a return of tuition, fees and associated BAH payments if the student does not pass the course.
-
-
-## Discussion
-
-Discussion will be facilitated by the instructor with the class being broken into semi-permanent teams who will be assigned specific questions about the readings. After discussion, the teams will publish a summary of their conclusions to the rest of the class and answer questions from the class about the summary.
-
-Teams will be assigned by the instructor during the first week of class. Assignments will be made based a survey of completed math, economics and statistics courses. The intent is to ensure that each team has the skills it needs to succeed.
-
-A team may remove a member by an anonymous simple majority vote of current members. Removed members will act as a team of one until other teams remove members or students join the class. Removed members may join other teams by an anonymous  vote of the receiving team. All votes will be conducted by the instructor. The instructor reserves the right to reassign students to teams should there be large differences in team size.
-
-Teams are expected to create intuitive explanations, make critical statements, and field reasonable questions.  Performance will be evaluated by the instructor on a 0 to 5 scale.  Feedback from students in the form of Best and Worst group member will be collected at the end of the class meeting.
-
-## Assignments
-
-In-class discussions are most effective when everyone has read the material before class.  In order to make this more likely there may be a small writing or problem solving  assignment associated with the readings.
-
-These questions may be microeconomic theory questions, interpretations of graphs and regression output in papers, etc. They will not be duplicates of the questions we will discuss in class.
-
-These will be due at the start of the class to avoid any confusion.
-
-## Individual/Group Term Paper
-
-The largest assignment will be a term paper. The term paper may be
-either a literature review, in which case it _must_ be completed by an individual, or an empirical/theoretical
-paper which may have up to three co-authors. Graduate students
-must complete an empirical/theoretical paper. Term paper preparation and evaluation will be in stages.  
-
-
-The first step of the assignment, the writing sample, is intended to make sure that you know how to properly cite sources and other writing tasks that should have been been covered in your FRINQ and SINQ courses.  **If your writing sample is not where it should be, all the due dates for the paper are up to a week earlier and you will be required to schedule and attend a session at the Writing Center for each step in the term paper process.**
-
-Key deadlines for the term paper are given below.  Deadlines in parentheses are for those students who's writing sample was not acceptable.  Please note that dates for returning my comments are included:
-
-1. Writing Sample: _October 7th at 5pm_. Graded by October 9th at 5pm
-1. Draft Abstract: _October 18th (October 14th) at 5pm_. Comments returned at Abstract Review Meeting.
-1. 20-minute Abstract Review: _October 23rd (October 20th) at 5pm_.
-1. Revised Abstract: _October 28th (Oct 22) at 5pm_.
-1. Annotated bibliography: _November 6th (October 30th)  at 5pm_. Comments returned by November 9th (November 2nd) at 8pm
-1. 20-Minute Presentation: _November 13th (November 6th)_.
-1. Draft Paper: _November 19th  (November 12th) at 5 pm_.  Comments returned by November 23rd (November 16th) 8pm.
-1. Final Paper: _December 4th at 5pm_. 
-
-Term papers must be **less than 20 pages** excluding bibliography, but should be at least 15 pages.  The final submission must include a separate document addressing issues with the draft paper stating how the point is either irrelevant or how it is addressed in the paper.
-
-## Planning for COVID-19 Flexibility
-
-There is a good chance that some of us will get sick. The [symptoms](https://www.cdc.gov/coronavirus/2019-ncov/symptoms-testing/symptoms.html) are generally known and the effects are anything between minor and major, temporary and permanent, and death.
-
-I can't plan for every contingency and, as of writing this, PSU has not given much in the way of guidance. Here is my proposed plan for illness that lasts for less than and more than two weeks for both students and faculty.
-
-
-### Student is Ill for _Less_ than Two Weeks
-
-This is the, you are probably not going to die but feel really miserable type of experience.  It means you may miss a few homework assignments and discussions.  It could also mean that you get behind on your term paper.
-
-Here is what you do for class when you get sick:
-
-1. Notify Jamie (woodsj@pdx.edu or slack @woodsj) immediately.  This needs to be before the missed class.  
-    + Don't turn in the assignment just before the deadline and then send an email that you are ill and can't make it to class.
-    + If you turned in the homework the day before and then don't feel well the next day and have to email me, that is fine.
-1. Keep notifying Jamie when you are missing class because of illness.
-1. Sleep, heal, generally do what fixes you.
-1. You can keep turning in the assignments and get credit for them.
-1. If you don't turn in assignments while you are healing up, I will reweight your grade so you are not harmed.  Basically, if you think you can do better than your average, keep working.  If you think you will do worse -- go back to bed.
-
-You now feel better and you have missed four or fewer classes:
-
-1.  Notify Jamie (woodsj@pdx.edu or slack @woodsj) that you  are well and will return to class.
-1.  _Immediately_ after that go to https://woodsj.youcanbook.me/ and schedule a 20 minutes meeting **for each** of the discussion sessions you missed.
-        + If you have not completed the meetings within two weeks, you will not have another opportunity to make up the discussion assignment.
-    + There are no other times to meet. I built in maximum flexibility on my part.  If you can't find a spot, rearrange your schedule.
-    + Setting up these meetings is your responsibility.
-    + The calendar only goes out two weeks on purpose.  You need to catch up within two weeks.
-    + Let me know the exact article or chapter we will be discussing for each meeting.  There is a space on the scheduling form.
-1. Study the readings that you missed.
-1.  In any event, the meetings must be completed by the end of the last week of class -- not final exam week. 
-    + There is not much I can do if you are ill for the last two weeks of class.  There is simply no time to make up the material.
-    
-
-The one-on-one meetings with me are intended to verify that you have done due diligence on the reading and are thinking about the issues at a college level and connecting them to what you know about economic theory and statistics. I will grade these meetings the same way I grade in class discussion.
-
-There is also the possibility that your illness will make it difficult to stay on schedule to complete your term paper. Because the term paper is a longer-term project, there is more time to catch up. When you are done with your illness that lasts at least two but less than four classes in a row, you will have three options with respect to the term paper deadlines:
-
-1.  **Situation Normal**:  All remaining deadlines remain the same.
-1.  **I Can Recover**:  All remaining deadlines are pushed back a week, except for the final draft of the paper which is due three days later.  This can only be done after the one-on-one meetings to discuss missed in-class discussions are scheduled.
-1.  **Put This Over Here With the Rest of the Fire**:  All remaining term paper deadlines are pushed back two weeks except for the final draft which is put off for about a year. _This is only available if the student is ill for at least three consecutive sessions._  The student will receive an incomplete in the course and must turn in the final draft of the paper by September 1st, 2021 to receive a course grade.
-
-You must indicate which option you want and can move back towards "Situation Normal" but not the other way.
-
-### Student is Ill for _More_ than Two Weeks
-
-This means you have missed more than 20% of the class.  That is hard to make up.  What you should do at this point is file a deadline appeal.  You do that online at https://www.pdx.edu/registration/DAC.
-
-Fill out the electronic form saying that you were sick and attach documentation about your illness.  They require documentation and there is a procedure if you physically can't fill out the form on your own because of your illness. If your appeal is accepted, then this class will be removed from your transcript, not even a _W_ will be there, and you will have the associated tuition and fees returned.
-
-Please contact financial aid and your scholarship funder to talk about financial implications.  The rules are likely to be in flux.
-
-### Jamie is Ill
-
-Here is where there is less certainty and less flexibility.  We don't really have the ability to have backup for all our courses. There is no backup for this class.
-
-I will make an announcement if I can't make it to our regular meeting time. In that case, the zoom meeting will be canceled and the discussions may or may not be rescheduled depending on class schedule and how far ahead I have prepared discussion questions. If I have already prepared questions, discussion will be led by the graduate assistant.
-
-If my illness extends beyond two absences, I will contact the chair of the department and work out what to do.  PSU has not done any contingency planning for faculty illness, incapacitation, hospitalization or death.  Sorry about not having details.
-
-### An Appeal
-
-All this flexibility comes at a cost to me.  I'm keeping large chunks of my calendar open for one-on-one meetings.  I have to review each article before the meetings and create new discussion questions for each person that gets behind.
-
-I am enthusiastic about helping students that take their education seriously and will aggressively defend and advocate for you in many ways. Make me feel like my effort was worth while.  This does not mean thanking me.  It means treating me like I'm someone trying to help you rather than a barrier you are trying to bypass with minimal effort.
-
-# Topics and Readings
-
-Do not let this section alarm you.  We will only address part of this outline in the class. Much of it is optional reading.  The details of what is required will be in D2L.
-
-
-+ Introduction of Core Topics
-    + Overview  
-        + "Energy Primer: A Handbook of Energy Market Basics", FERC, 2015 (https://www.ferc.gov/market-assessments/guide/energy-primer.pdf), Chapter 1
-        + Dahl, Ch 1-2.
-    + Coal
-        + Dahl, Ch 3.
-        + Murray, Michael P.. 2006. "Avoiding Invalid Instruments and Coping with Weak Instruments." Journal of Economic Perspectives, 20(4): 111-132. http://stats.lib.pdx.edu/proxy.php?url=https://www.aeaweb.org/articles?id=10.1257/jep.20.4.111
-    + Natural Gas
-        + Dahl, Ch 8.
-        + Energy Primer, Ch 2.
-        + Joskow, Paul L.. 2013. "Natural Gas: From Shortages to Abundance in the United States." American Economic Review, 103(3): 338-43. http://stats.lib.pdx.edu/proxy.php?url=https://www.aeaweb.org/articles?id=10.1257/aer.103.3.338
-        + Culver, Walter J., and Mingguo Hong. "Coal’s decline: Driven by policy or technology?." The Electricity Journal 29.7 (2016): 50-61. https://stats.lib.pdx.edu/proxy.php?url=https://www.sciencedirect.com/science/article/pii/S104061901630121X
-    + Electricity
-        + Energy Primer, Ch 3. 
-        + Dahl, Ch 5-6.
-        + Joskow, Paul L. "Markets for power in the United States: An interim assessment." The Energy Journal, Vol. 27, No. 1. http://economics.mit.edu/files/1184
-        + Joskow, Paul L.. 2012. "Creating a Smarter U.S. Electricity Grid." Journal of Economic Perspectives, 26(1): 29-48. http://stats.lib.pdx.edu/proxy.php?url=https://www.aeaweb.org/articles?id=10.1257/jep.26.1.29
-        + Covert, Thomas, Michael Greenstone and Christopher R. Knittel. 2016. "Will We Ever Stop Using Fossil Fuels?" Journal of Economic Perspectives, 30(1): 117-38. http://stats.lib.pdx.edu/proxy.php?url=https://www.aeaweb.org/articles?id=10.1257/jep.30.1.117
-        + Borenstein, Severin. 2012. "The Private and Public Economics of Renewable Electricity Generation." Journal of Economic Perspectives, 26(1): 67-92. http://stats.lib.pdx.edu/proxy.php?url=https://www.aeaweb.org/articles?id=10.1257/jep.26.1.67
-        + Puller, Steven L. and Jeremy West. 2013. "Efficient Retail Pricing in Electricity and Natural Gas Markets." American Economic Review, 103(3): 350-55. http://stats.lib.pdx.edu/proxy.php?url=https://www.aeaweb.org/articles?id=10.1257/aer.103.3.350
-    + Oil
-        + Dahl, Ch 7.
-        + Energy Primer, Ch 4.
-        + Smith, James L 2009. "World Oil: Market or Mayhem?" Journal of Economic Perspectives, 23(3): 145-64. http://stats.lib.pdx.edu/proxy.php?url=https://www.aeaweb.org/articles?id=10.1257/jep.23.3.145
-        + Baumeister, Christiane and Lutz Kilian. 2016. "Forty Years of Oil Price Fluctuations: Why the Price of Oil May Still Surprise Us." Journal of Economic Perspectives, 30(1): 139-60. http://stats.lib.pdx.edu/proxy.php?url=https://www.aeaweb.org/articles?id=10.1257/jep.30.1.139
-        + Venables, Anthony J. 2016. “Using Natural Resources for Development: Why Has It Proven So Difficult?” Journal of Economic Perspectives 30 (1): 161–84. https://www.aeaweb.org/articles?id=10.1257/jep.30.1.161 
-    + Transportation Electrification
-        + Knittel, Christopher R. 2012. “Reducing Petroleum Consumption from Transportation.” Journal of Economic Perspectives 26 (1): 93–118. https://www.aeaweb.org/articles?id=10.1257/jep.26.1.93 
-+ Topic Options, Voted on in Class
-    + Financial Markets
-        + Energy Primer, Ch 5.
-        + Dahl, Ch 18 - 19.
-        + Knittel, Christopher R. and Robert S. Pindyck. 2016. "The Simple Economics of Commodity Price Speculation." American Economic Journal: Macroeconomics, 8(2): 85-110. http://stats.lib.pdx.edu/proxy.php?url=https://www.aeaweb.org/articles?id=10.1257/mac.20140033
-        + Deng, Shi-Jie, and Shmuel S. Oren. "Electricity derivatives and risk management." Energy 31.6 (2006): 940-953. http://stats.lib.pdx.edu/proxy.php?url=http://www.sciencedirect.com/science/article/pii/S0360544205000496
-    + Intro to Externalities and Public Goods
-        + Dahl, Ch 11 - 12.
-        + Viscusi, W. Kip, Joseph E. Harrington, and John M. Vernon. Economics of regulation and antitrust. MIT press, 2005., Ch 21 http://search.library.pdx.edu/PSU:all:CP71189149050001451
-        + Metcalf, Gilbert E.. 2009. "Market-Based Policy Options to Control U.S. Greenhouse Gas Emissions." Journal of Economic Perspectives, 23(2): 5-27. http://stats.lib.pdx.edu/proxy.php?url=https://www.aeaweb.org/articles?id=10.1257/jep.23.2.5
-        + Goulder, Lawrence H. 2013. “Markets for Pollution Allowances: What Are the (New) Lessons?” Journal of Economic Perspectives 27 (1): 87–102. https://www.aeaweb.org/articles?id=10.1257/jep.27.1.87 
-        + Fisher-Vanden, Karen, and Sheila Olmstead. 2013. “Moving Pollution Trading from Air to Water: Potential, Problems, and Prognosis.” Journal of Economic Perspectives 27 (1): 147–72. https://www.aeaweb.org/articles?id=10.1257/jep.27.1.147 
-    + Natural Gas Outside the US
-        + Dahl, Ch 9 - 10.
-        + "International Energy Outlook", 2019, EIA, Ch 3. (https://www.eia.gov/outlooks/ieo/pdf/ieo2019.pdf)
-    + Price Controls and Subsidies (Not Carbon Taxes and Implicit Subsidies)
-        + Dahl, Ch 4
-    + Market Monitoring
-        + Energy Primer, Ch 6.
-        + Helman, Udi. "Market power monitoring and mitigation in the US wholesale power markets." Energy 31.6 (2006): 877-904. http://stats.lib.pdx.edu/proxy.php?url=http://dx.doi.org/10.1016/j.energy.2005.05.011
-    + Hotelling's Rule and Dynamic Extraction
-        + Dahl, Ch 14
-        + Gaudet, Gérard. "Natural resource economics under the rule of Hotelling." Canadian Journal of Economics/Revue canadienne d'économique 40.4 (2007): 1033-1059. http://onlinelibrary.wiley.com/doi/10.1111/j.1365-2966.2007.00441.x/full
-    + Supply and Cost Curves
-        + Dahl Ch 15
-    + Energy Demand
-        + Dahl Ch 16
-        + Allcott, Hunt and Michael Greenstone. 2012. "Is There an Energy Efficiency Gap?" Journal of Economic Perspectives, 26(1): 3-28. http://stats.lib.pdx.edu/proxy.php?url=https://www.aeaweb.org/articles?id=10.1257/jep.26.1.3
-        + Dubin, Jeffrey A., and McFadden Daniel L. "An Econometric Analysis of Residential Electric Appliance Holdings and Consumption." Econometrica 52.2 (1984): 345-62. http://stats.lib.pdx.edu/proxy.php?url=http://www.jstor.org/stable/1911493
-        + David R. Kamerschen, David V. Porter, The demand for residential, industrial and total electricity, 1973–1998, Energy Economics, Volume 26, Issue 1, January 2004, Pages 87-100, http://stats.lib.pdx.edu/proxy.php?url=http://dx.doi.org/10.1016/S0140-9883(03)00033-1
-        + RESIDENTIAL ENERGY CONSUMPTION SURVEY (RECS), EIA. https://www.eia.gov/consumption/residential/index.cfm We will use this as an example of end use modeling as well as survey data collection and estimation.
-   
-
-# Other Rules
-
-
-+ When completing online quizzes or other assignments, you may use your book, wiki, calculator, spreadsheets, notes, or other resources as long as it is not another student or person.  *The work must be authentically and genuinely your own. In other words, if you are copying answers you found online, it is not your work.*
-
-+ In this classroom, we support and value diversity.  To do so requires that we:
-
-    + Respect the dignity and essential worth of all individuals
-    + Promote a culture of respect toward all individuals
-    + Respect the privacy, property, and freedom of others
-    + Reject bigotry, discrimination, violence, or intimidation of any kind
-    + Practice personal and academic integrity and expect it from others
-    + Promote the diversity of opinions, ideas, and backgrounds, which is the lifeblood of a university
-
-   For additional information, please see the Office of Affirmative Action \& Equal Opportunity at http://www.pdx.edu/diversity/affirmative-action.
-
-
-+ Accommodations are collaborative efforts between students, faculty, and the Disability Resource Center.  If you have a documented disability and require accommodation, you must arrange to meet with the course instructor prior to or within the first week of the term.  The documentation of your disability must come in writing from the Disability Resource Center (Faculty letter).  Students who believe they are eligible for accommodations but who have not yet obtained approval through the DRC should contact the DRC immediately.  Reasonable and appropriate accommodations will be provided for students with documented disabilities.  For more information on the Disability Resource Center, please see http://www.drc.pdx.edu/. 
-
-+ Academic honesty is expected and required of students enrolled in this course.  Suspected academic dishonesty in this course will be handled according to the procedures set out in the Student Code of Conduct.
-
-+ I am sympathetic to family emergencies but you must inform me as soon as possible. If the notice is verbal, please email me with your understanding of our agreement. All agreements have to be in writing.
-
-Link to this syllabus https://github.com/woodsjam/Course-Energy-Economics. Check branch for this term.
